# rjafecit

./: .env.example  .gitignore  README.md  drizzle.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
app/: Dockerfile  globals.css  layout.tsx  page.tsx
app/api/random/: route.ts
app/api/v1/random/: route.ts
app/api/v1/smorfia/: route.ts
backend/: Dockerfile  main.py  pyproject.toml
data/: smorfia_napoletana.json
docker/: buildrun.sh  docker-compose.yml
drizzle/: 0000_light_psylocke.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/: auth.ts
lib/db/: index.ts  schema.ts
scripts/: migrate.ts  seed.ts
tests/: load.js
